welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : String
 required: Char
	var M:Char=litMessage()
                             ^BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='R') {
             ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='L') {
             ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='I') {
             ^BDRBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='A') {
             ^BDRBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='B') {
             ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='C') {
             ^BDRBuggle:29: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='Z') {
             ^BDRBuggle:32: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='Y') {
             ^BDRBuggle:36: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M='W') {
             ^